<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_assessment</name>
  <version>0.0.0</version>
  <description>Final Assessment for ROS-I Nav2 course 2023</description>
  <maintainer email="stu-joharmana@artc.a-star.edu.sg">rosi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
   <build_depend>nav2_bringup</build_depend>
   <exec_depend>cartographer_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
